set up for heroku deployment

--- a/Pipfile
+++ b/Pipfile
@@ -5,6 +5,10 @@ name = "pypi"
 
 [packages]
 django = "*"
+psycopg2-binary = "*"
+django-environ = "*"
+django-on-heroku = "*"
+gunicorn = "*"
 
 [dev-packages]
 
