--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,7 @@ psycopg2-binary = "*"
 django-environ = "*"
 django-on-heroku = "*"
 gunicorn = "*"
+django-registration-redux = "*"
 
 [dev-packages]
 
