--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ django-environ = "*"
 django-on-heroku = "*"
 gunicorn = "*"
 django-registration-redux = "*"
+django-extensions = "*"
 
 [dev-packages]
 
